PyMaker/datas/object2/RawHTML/i16501/Python_DOC_referPages.how-to-cube-a-number.txt
<div class="post-text" itemprop="text">
<p>I just started using Python today for my class and one of my problems is cubing a number in Python. I know the way to do it is <code>x^3</code>, but that doesn't work in Python. I was just wondering how I would be able to do that. </p>
<p>This is what I tried so far, but as you can see, I keep getting syntax errors:</p>
<pre><code>&gt;&gt;&gt; def volume (v) :
    return v^3
volume(4)
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Python uses the <a href="https://docs.python.org/3/reference/expressions.html#the-power-operator" rel="nofollow noreferrer"><code>**</code> operator</a> for exponentiation, not the <a href="https://docs.python.org/3/reference/expressions.html#binary-bitwise-operations" rel="nofollow noreferrer"><code>^</code> operator</a> (which is a bitwise XOR):</p>
<pre><code>&gt;&gt;&gt; 3*3*3
27
&gt;&gt;&gt;
&gt;&gt;&gt; 3**3  # This is the same as the above
27
&gt;&gt;&gt;
</code></pre>
<p>Note however that the syntax error is being raised because there is no newline before <code>volume(4)</code>:</p>
<pre><code>&gt;&gt;&gt; def volume(v):
...     return v**3
... volume(4)
  File "&lt;stdin&gt;", line 3
    volume(4)
         ^
SyntaxError: invalid syntax
&gt;&gt;&gt;
&gt;&gt;&gt; def volume(v):
...     return v**3
...                  # Newline
&gt;&gt;&gt; volume(4)
64
&gt;&gt;&gt;
</code></pre>
<p>When you are in the interactive interpreter, the newline lets Python know that the definition of function <code>volume</code> is finished.  </p>
</div>
<div class="post-text" itemprop="text">
<p>Actually different symbols mean different things in different programming languages. In some languages, <code>^</code> means exponent, but in Python, the exponent operator symbol is <code>**</code>:</p>
<pre><code>&gt;&gt;&gt; 3**3
27
</code></pre>
<p>The <code>^</code> symbol is for the bitwise 'xor' operation:</p>
<pre><code>&gt;&gt;&gt; 1^1
0
&gt;&gt;&gt; 1^0
1
</code></pre>
<p>Read the documentation on the <a href="https://docs.python.org/2/library/operator.html" rel="nofollow">operator module</a> to see how Python really treats these symbols.</p>
</div>
<div class="post-text" itemprop="text">
<p>Use the <code>*</code> key twice</p>
<pre><code>def volume (v) :
    return v**3
volume(4)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You can use the <code>**</code> operator to do exponential calculations.</p>
<pre><code>def volume(v)
    return v**3
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Use two asteric's between the number and the power. Ex <code>2^5</code> in math is <code>2**5</code> in python. You can also do something along the lines of <code>math.pow(100, 2) =  10000.0</code>.</p>
</div>
<div class="post-text" itemprop="text">
<p>The Best way to do this is</p>
<p>cube = lambda x: x**3</p>
<p>cube(3)</p>
<p>but one another solution be like which result into the same
cube = lambda x: x*x**2</p>
<p>cube(3)</p>
<p>one another alter solution be like</p>
<p>math.pow(3,3)</p>
<p>all will return the cube of number 3.</p>
</div>
<span class="comment-copy">" I know the way to do it is <code>x^3</code>, but that doesn't work in Python." That's a contradiction per se. If that doesn't work in Python, it's obviously not the way to do.</span>
<span class="comment-copy">Please add formatting for code sections.</span>
